# cortex

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  rustfmt.toml
crates/cortex-app/: Cargo.toml  package.json  tauri.conf.json
crates/cortex-app/capabilities/: default.json
crates/cortex-app/icons/: icon.icns
crates/cortex-app/src/: cli.rs  commands.rs  docs_generator.rs  main.rs  state.rs
crates/cortex-app/src-tauri/capabilities/: default.json
crates/cortex-app/src-tauri/permissions/: all.json
crates/cortex-app/ui/: .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
crates/cortex-app/ui/.storybook/: main.ts  manager.ts  preview.tsx  storybook.css  theme.ts
crates/cortex-app/ui/src/: App.tsx  bindings.ts  index.css  main.tsx
crates/cortex-app/ui/src/components/: CollectionExplorer.tsx  PromptVariableDialog.tsx  TemplateInput.tsx  VariableEditor.tsx  VariablePanel.tsx  VariablePreview.tsx  WorkspaceHeader.tsx
crates/cortex-app/ui/src/components/collection/: CollectionAuthTab.tsx  CollectionClientCertificatesTab.tsx  CollectionHeadersTab.tsx  CollectionOverviewTab.tsx  CollectionPresetsTab.tsx  CollectionProtobufTab.tsx  CollectionProxyTab.tsx  CollectionScriptTab.tsx  CollectionSecretsTab.tsx  CollectionTestsTab.tsx  CollectionVarsTab.tsx  CollectionView.tsx  FolderView.tsx
crates/cortex-app/ui/src/components/collection-runner/: CollectionRunnerPanel.tsx
crates/cortex-app/ui/src/components/composer/: AuthTab.tsx  BodyTab.tsx  Composer.tsx  ComposerTabs.tsx  ExampleView.tsx  FormDataEditor.tsx  HeadersTab.tsx  KeyValueEditor.tsx  MethodSelector.tsx  ParamsTab.tsx  SendButton.tsx  SettingsTab.tsx  TagManagerDialog.tsx  TagPopover.tsx  TagsRow.tsx  UrlInput.tsx  UrlPreviewBar.tsx  VarPopover.tsx  VariableEditor.tsx  VariableInput.tsx  VariablePickerDropdown.tsx  useVariablePicker.ts  varBadges.ts
crates/cortex-app/ui/src/components/layout/: CollectionEnvironmentsTab.tsx  DocumentationPanel.tsx  EmptyComposerState.tsx  EnvironmentDropdown.tsx  EnvironmentSwitcher.tsx  EnvironmentsTab.tsx  PanelShell.tsx  RequestTabBar.tsx  ResponseHeadersTab.tsx  ResponseMetaBar.tsx  ResponseMultipartView.tsx  ResponsePane.tsx  ResponsePrettyTab.tsx  ResponsePreviewTab.tsx  ResponseRawTab.tsx  ResponseTabs.tsx  ResponseVisualizeTab.tsx  Sidebar.tsx  SidebarFooter.tsx  SidebarHeader.tsx  SidebarTree.tsx  StatusBar.tsx  TabItem.tsx  TagFilterBar.tsx  ThemePicker.tsx  TopNav.tsx  TreeNode.tsx  UrlBar.tsx  WelcomeScreen.tsx  WorkspaceDropdown.tsx  WorkspaceHome.tsx  WorkspaceOverview.tsx  WorkspacePicker.tsx
crates/cortex-app/ui/src/components/shell/: Composer.tsx  Shell.tsx  Sidebar.tsx  TabBar.tsx  TopBar.tsx
crates/cortex-app/ui/src/contexts/: TabsContext.tsx  ThemeContext.tsx
crates/cortex-app/ui/src/lib/: methods.ts
crates/cortex-app/ui/src/stores/: collectionEnvironmentStore.ts  collectionRunnerStore.ts  collectionStore.ts  collectionViewStore.ts  commandRegistry.ts  environmentStore.ts  requestStore.ts  responseStore.ts  toastStore.ts  uiStore.ts  workspaceStore.ts
crates/cortex-app/ui/src/stories/: Placeholder.stories.tsx  Welcome.mdx
crates/cortex-app/ui/src/styles/: cmdk-overrides.css  index.css  tokens.css
crates/cortex-app/ui/src/utils/: codeGen.ts  dndUtils.ts  fuzzyMatch.ts  multipart.ts  scriptRunner.ts  tagColors.ts
crates/cortex-app/ui/storybook-static/: iframe.html  index.html  index.json  project.json  vite-inject-mocker-entry.js
crates/cortex-app/ui/storybook-static/assets/: Color-KMSTOMOX-Cqai48Np.js  Dialog-BQxkuHrZ.js  Dialog-MIUUJcU6.js  Dialog.stories-C9zoFciy.js  DocsRenderer-JROSPFPF-Cv2a6aJZ.js  EmptyComposerState-DPe01uf7.js  EmptyComposerState.stories-CROQ6fah.js  IconCatalog-qaPDhjNm.js  IconCatalog.stories-Cz3BFcff.js  Icons-DjzhDYF3.js  InfoPanel-BQg62_s5.js  InfoPanel-yDPzqW_L.js  InfoPanel.stories-Q1r5pr3v.js  InlineInput-CnlXwacu.js  InlineInput-D-6bKBXk.js  InlineInput.stories-Dp_-CrNM.js  KeyValueEditor-CMfEyFmv.js  KeyValueEditor.stories-1uz3uRa5.js  MethodBadge-BthUWyJx.js  MethodBadge-Dl_g0J1V.js  MethodBadge.stories-Br5fl0Qx.js  MethodSelector-CHZNDXam.js  MethodSelector-Dw3uCsoo.js  MethodSelector.stories-CfATiZfg.js  Placeholder.stories-B9m6g79g.js  ResponseHeadersTab-AYvYoyqk.js  ResponseHeadersTab.stories-B3HO9XIb.js  ResponseMetaBar-B1-yRnot.js  ResponseMetaBar.stories-BVHSw9lf.js  ResponseRawTab-DIOidK_K.js  ResponseRawTab.stories-CGiivpYH.js  SendButton-B3fSDd3K.js  SendButton-DN8bYK0V.js  SendButton.stories-DsRnamvN.js  SidebarFooter-LaWlwcIu.js  SidebarFooter.stories-t8FyRnaU.js  SidebarTree-Fz1p2-_F.js  SidebarTree.stories-B7KgQ8ym.js  StatusBar-B7q_F_8s.js  StatusBar.stories-Bw8UXFSV.js  (+50 more)
crates/cortex-app/ui/storybook-static/sb-manager/: globals-runtime.js  globals.js  manager-stores.js  runtime.js
crates/cortex-core/: Cargo.toml
crates/cortex-core/examples/: env_demo.rs
crates/cortex-core/src/: aws_sigv4.rs  collection.rs  crypto.rs  environment.rs  executor.rs  gitignore.rs  lib.rs  request.rs  template.rs  variables.rs  workspace.rs
crates/cortex-core/tests/: integration_test.rs  serialization_roundtrip.rs
(+130 files in other folders)
