[workspace]
members = [
    "crates/cortex-core",
    "crates/cortex-cli",
    "crates/cortex-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cortex Team"]

[workspace.dependencies]
tauri = { version = "2.0", features = [] }
tauri-build = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cortex-core = { path = "crates/cortex-core" }
