[workspace]
members = [
    "crates/cortex-core",
    "crates/cortex-cli",
    "crates/cortex-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cortex Team"]

[workspace.dependencies]
tauri = { version = "2.0", features = [] }
tauri-build = { version = "2.0", features = [] }
specta = { version = "=2.0.0-rc.20", features = ["derive"] }
tauri-specta = { version = "=2.0.0-rc.20", features = ["typescript"] }
specta-typescript = "=0.0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cortex-core = { path = "crates/cortex-core" }
