[package]
name = "cortex"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tauri = { workspace = true, features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
tauri-specta = { workspace = true }
specta-typescript = { workspace = true }
cortex-core = { workspace = true }
dirs = { workspace = true }
tauri-plugin-dialog = { workspace = true }
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
tauri-build = { workspace = true, features = [] }
