[package]
name = "cortex"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tauri = { workspace = true, features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
tauri-specta = { workspace = true }
specta-typescript = { workspace = true }
cortex-core = { workspace = true }
base64 = "0.21"
dirs = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
percent-encoding = "2.3"
rand = "0.8"
walkdir = "2.4"
zip = "2"
serde_yaml = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
pulldown-cmark = "0.11"

[features]
# Compile the webview developer tools into release builds. Debug builds always
# have them (via `debug_assertions`); enable this to also ship them in release.
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }
