[package]
name = "cortex-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
specta = { workspace = true }
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
subtle = "2.5"
md5 = "0.7"
trash = "3.1"
walkdir = "2.4"
notify = "6.1"
chrono = "0.4"
mime_guess = "2.0"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"
